--- a/DungeonCrawlerMovement/addons/level_block/plugin.cfg
+++ b/DungeonCrawlerMovement/addons/level_block/plugin.cfg
@@ -2,6 +2,6 @@
 
 name="Level Block"
 description="A node for creating simple cubes with customizable sides and collision. Intended for dungeon crawler level design."
-author="Tero Salmela"
-version="0.1"
+author="Reun Media"
+version="1.0.2"
 script="level_block.gd"
